--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ pool:
 
 
 steps:
+- task: DotNetCoreInstaller@0
+  inputs:
+    version: '2.1.300' # replace this value with the version that you need for your project
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
