--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ steps:
   inputs:
     version: '2.1.300' # replace this value with the version that you need for your project
 
+- script: dotnet restore
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
