--- a/FSBOL/FSBOL.fsproj
+++ b/FSBOL/FSBOL.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <PlatformTarget>x64</PlatformTarget>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Authors>Prashant Vaidyanathan, Colin Gravil, Filippo Polo, Andrew Phillips</Authors>
+    <Authors>Prashant Vaidyanathan, Colin Gravill, Filippo Polo, Andrew Phillips</Authors>
     <Company>SynBioDex</Company>
     <Version>2.2.1</Version>
     <PackageProjectUrl>https://github.com/SynBioDex/fSBOL</PackageProjectUrl>
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/SynBioDex/fSBOL</RepositoryUrl>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageTags>FSharp, F#, SBOL, SyntheticBiology</PackageTags>
-    <PackageReleaseNotes>Compatible with SBOL Version 2.2.1 (http://sbolstandard.org/wp-content/uploads/2016/06/SBOL-data-model-2.2.1.pdf)</PackageReleaseNotes>
+    <PackageReleaseNotes>Compliant with SBOL Version 2.2.1 (http://sbolstandard.org/wp-content/uploads/2016/06/SBOL-data-model-2.2.1.pdf)</PackageReleaseNotes>
     <Copyright>Copyright 2019</Copyright>
     <Description>FSharp library for the Synthetic Biology Open Language Data Model</Description>
   </PropertyGroup>
